# aichat2md

./: .gitignore  CLAUDE.md  Claude Code 竞争力分析.md  IMPLEMENTATION.md  LICENSE  README.md  README_zh.md  chatgpt2md.py  config_manager.py  debug_claude_cookies.py  extracted_content.html  extracted_text.txt  prompt_template.py  pyproject.toml  structurizer.py
.claude/: settings.local.json
aichat2md/: __init__.py  cli.py  config.py  structurizer.py
aichat2md/extractors/: __init__.py  html_extractor.py  playwright_extractor.py  webarchive_extractor.py
aichat2md/prompts/: __init__.py  system_prompt_en.txt  system_prompt_zh.txt
docs/plans/: 2024-02-02-chatgpt2md-implementation.md  2024-02-02-chatgpt2md-tool-design.md  2026-02-03-timeout-optimization-design.md
extractors/: __init__.py  playwright_extractor.py
tests/: __init__.py  test_cli.py  test_config.py
