[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aichat2md"
version = "1.2.0"
description = "Convert AI chat conversations to structured Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "PlaceNameDay"}]
keywords = ["chatgpt", "claude", "markdown", "ai", "converter", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "yaspin>=3.0.0",
]

[project.scripts]
aichat2md = "aichat2md.cli:main"

[project.urls]
Homepage = "https://github.com/placenameday/aichat2md"
Repository = "https://github.com/placenameday/aichat2md"
Issues = "https://github.com/placenameday/aichat2md/issues"

[tool.setuptools.package-data]
aichat2md = ["prompts/*.txt"]
